--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ node_js:
 before_script:
   - npm install -g grunt-cli bower
   - bower install
-script: grunt ci --verbose
+script: grunt test --verbose
