--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "grunt-contrib-watch": "^0.6.1"
   },
   "dependencies": {
-    "jquery": ">=1.8",
-    "jquery.cookie": ">=1.4.1"
+    "jquery": ">=1.8"
   },
   "scripts": {
     "test": "grunt test"
